Corregir error al crear un instrumento seguido de otro instrumento. Se ha ajustado la lógica de creación de instrumento para garantizar la integridad de la base de datos. Además, se han eliminado las anotaciones relacionadas con la categoría en la entidad Instrumento para simplificar la estructura y mejorar la mantenibilidad del código.